# rust_axum_postgres_api

./: .env  Cargo.toml
src/: handler.rs  main.rs  route.rs  schema.rs
